--- a/.github/workflows/slack.yml
+++ b/.github/workflows/slack.yml
@@ -1,8 +1,7 @@
 name: Slack Notifications
 
 on:
-  pull_request:
-    branches: [ master ]
+  push
 
 jobs:
   notifySlack:
@@ -10,9 +9,5 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Notify slack
-      env:
-        SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
-      uses: abinoda/slack-action@master
-      with:
-        args: '{\"channel\":\"C014RMKG6H2\",\"blocks\":[{\"type\":\"section\",\"text\":{\"type\":\"mrkdwn\",\"text\":\"*Pull Request:* ${{ github.event.pull_request.title }}\"}},{\"type\":\"section\",\"text\":{\"type\":\"mrkdwn\",\"text\":\"*Who?:* ${{ github.event.pull_request.user.login }}\n*Request State:* ${{ github.event.pull_request.state }}\"}},{\"type\":\"section\",\"text\":{\"type\":\"mrkdwn\",\"text\":\"<${{ github.event.pull_request.html_url }}|View Pull Request>\"}}]}'
+      - name: Checkout Action 🛎
+        uses: actions/checkout@v2
